--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html,
   position: relative;
 }
 .desktop {
-  background: url("https://i.pinimg.com/originals/31/4e/73/314e73fa2e9a76cf8dc47fd0672489f9.jpg") center right no-repeat;
+  background: url("https://cdn.wallpapersafari.com/23/55/iro6Wy.jpg") center right no-repeat;
   background-size: cover;
 }
 .taskbar {
