--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html,
   position: relative;
 }
 .desktop {
-  background: url("https://cdn.wallpapersafari.com/23/55/iro6Wy.jpg") center right no-repeat;
+  background: url("https://pixelz.cc/wp-content/uploads/2018/12/windows-10-light-theme-uhd-4k-wallpaper.jpg") center right no-repeat;
   background-size: cover;
 }
 .taskbar {
