--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ html,
 .taskbar .icon.win.open {
   background: rgba(255, 255, 255, 0.1);
   transition: background 0.1s ease-in-out;
+  position: center;
 }
 .taskbar .icon.minimized:after {
   content: "";
