--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html,
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
-  color: #fff;
+  color: #FFFFFF;
 }
 .taskbar:before,
 .taskbar:after {
