--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html,
   position: absolute;
   z-index: 9000;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(255,255,255,0.1);
   width: 100%;
   color: #FFFFFF;
 }
