--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html,
   clear: both;
 }
 .taskbar .icon {
-  position: bottom center;
+  position: relative;
   display: inline-block;
   height: 50px;
   width: 50px;
@@ -58,7 +58,6 @@ html,
 .taskbar .icon.win.open {
   background: rgba(255, 255, 255, 0.1);
   transition: background 0.1s ease-in-out;
-  position: center;
 }
 .taskbar .icon.minimized:after {
   content: "";
