--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html,
   position: relative;
 }
 .desktop {
-  background: url("https://www.hdwallpapers.in/download/windows_11_blue_stock_white_background_light_4k_hd_windows_11-HD.jpg") center right no-repeat;
+  background: url("https://fontmeme.com/permalink/241130/1b5004ba94d1b4eafae1ff4ba9e7e8bc.png") center right no-repeat;
   background-size: cover;
 }
 .taskbar {
