--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html,
   position: relative;
 }
 .desktop {
-  background: url("https://fontmeme.com/permalink/241130/1b5004ba94d1b4eafae1ff4ba9e7e8bc.png") center right no-repeat;
+  background: url("https://th.bing.com/th/id/R.6671b3eff71e08c9e8911e3741901357?rik=gX0CPeA3iCi2Pw&pid=ImgRaw&r=0") center right no-repeat;
   background-size: cover;
 }
 .taskbar {
